overflow fix

--- a/style.css
+++ b/style.css
@@ -7,11 +7,6 @@
   font-family: "Roboto", sans-serif;
 }
 
-html, body {
-  overflow-x: hidden;
-  width: 100%;
-}
-
 html {
   scroll-behavior: smooth;
 }
